# LabsS2

./: .gitignore
lab_itiop1/: .gitignore  commands.cpp  linked_list.cpp  main.cpp  myhandler.cpp  sch.drawio  Итиоп1.docx
lab_itiop1/proto/: commands.h  linked_list.h
lab_itiop2/: Queue.cpp  Stack.cpp  Terminal.cpp  commands.cpp  main.cpp  mode.cpp  myhandler.cpp  queue.cpp  sch.drawio  stack.cpp  z_doc2.docx
lab_itiop2/commander/: Command.cpp  Command.h  CommandABC.h  Executor.cpp  Executor.h  Handler.cpp  Handler.h  ILine.h  Line.cpp  Line.h  Receiver.cpp  Receiver.h  Tail.cpp  Tail.h
lab_itiop2/commands/: CheckIfEmpty_Command.cpp  Clear_Command.cpp  Pop_Command.cpp  Print_Command.cpp  Push_Command.cpp  Switch_Command.cpp  _BaseCommand.cpp
lab_itiop2/proto/: IOperations.h  Queue.h  Stack.h  Terminal.h  commands.h  mode.h  operations.h  queue.h  stack.h
lab_itiop3/: CMakeLists.txt  Stack.cpp  Terminal.cpp  Tree.cpp  main.cpp  myhandler.cpp  sch.drawio  z_doc3.docx
lab_itiop3/commander/: ICommand.h  ILine.h  Line.cpp  Line.h
lab_itiop3/commands/: AddMany_Command.cpp  Add_Command.cpp  Sum_Command.cpp  _BaseCommand.cpp
lab_itiop3/proto/: IOperations.h  Stack.h  Terminal.h  Tree.h
lab_itiop4/: CMakeLists.txt  sch.drawio  z_doc4.docx
lab_itiop4/include/commander/: ICommand.hpp  ILine.hpp
lab_itiop4/src/: CMakeLists.txt  main.cpp
lab_itiop4/src/commander/: AddInOrder_Command.cpp  AddInOrder_Command.hpp  Add_Command.cpp  Add_Command.hpp  Line.cpp  Line.hpp  Terminal.cpp  Terminal.hpp
lab_itiop4/src/table/: OrderedTable.cpp  Table.cpp  Table.hpp
lab_itiop4/test/: CMakeLists.txt  main.cpp
lab_itiop4/test/table/: OrderedTable.hpp  Table.cpp  Table.hpp
lab_itiop5/: sch.drawio  z_doc5.docx
lab_itiop5/include/commander/: ITerminal.hpp
lab_itiop5/src/: CMakeLists.txt  main.cpp
lab_itiop5/src/commander/: AddNum_Command.cpp  AddNum_Command.hpp  Add_Command.cpp  Add_Command.hpp  Line.cpp  Terminal.cpp  Terminal.hpp
lab_itiop5/src/table/: TableNum.cpp  TableNum.hpp  TableStr.cpp  TableStr.hpp
lab_itiop5/test/: CMakeLists.txt  main.cpp
lab_itiop5/test/table/: TableNum.cpp  TableStr.cpp
lab_tvp3/: Makefile  defend.cpp  defend.hpp  main1.cpp  main2.cpp
lab_tvp3/graph/: GraphNode.cpp  GraphNode.hpp  GraphTable.cpp  GraphTable.hpp
lab_tvp4/: Makefile  russian.h  tvp1.cpp  tvp4.Russia  tvp4.cpp
lab_tvpis2/: main.cpp
rgz_tvp/: a.out  main.cpp
